--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.6.3",
+    "@material-ui/core": "^4.11.4",
+    "axios": "^0.21.1",
     "next": "10.2.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.8.4"
   },
   "devDependencies": {
     "@types/react": "17.0.9",
