--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-hook-form": "^7.8.4",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
-    "redux-saga": "^1.1.3"
+    "redux-devtools-extension": "^2.13.9",
+    "redux-saga": "^1.1.3",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@types/classnames": "^2.3.1",
