--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@devexpress/dx-react-scheduler-material-ui": "^2.7.6",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "@pathofdev/react-tag-input": "^1.0.7",
+    "@types/lodash": "^4.14.171",
     "axios": "^0.21.1",
     "next": "10.2.3",
     "react": "17.0.2",
