--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@pathofdev/react-tag-input": "^1.0.7",
     "@types/lodash": "^4.14.171",
     "axios": "^0.21.1",
+    "html-react-parser": "^1.2.7",
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.8.4",
+    "react-quill": "^1.3.5",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "redux": "^4.1.0",
