--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "html-react-parser": "^1.2.7",
     "next": "10.2.3",
     "react": "17.0.2",
+    "react-card-flip": "^1.1.1",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.8.4",
     "react-quill": "^1.3.5",
