--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@pathofdev/react-tag-input": "^1.0.7",
+    "@popperjs/core": "2.9.1",
     "@types/lodash": "^4.14.171",
     "axios": "^0.21.1",
     "html-react-parser": "^1.2.7",
