--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@date-io/date-fns": "^2.11.0",
     "@devexpress/dx-react-core": "^2.7.6",
     "@devexpress/dx-react-scheduler": "^2.7.6",
     "@devexpress/dx-react-scheduler-material-ui": "^2.7.6",
@@ -16,9 +17,12 @@
     "@pathofdev/react-tag-input": "^1.0.7",
     "@popperjs/core": "2.9.1",
     "@types/lodash": "^4.14.171",
+    "@zeit/next-css": "^1.0.1",
+    "@zeit/next-sass": "^1.0.1",
     "axios": "^0.21.1",
     "html-react-parser": "^1.2.7",
     "next": "10.2.3",
+    "node-sass": "^6.0.1",
     "react": "17.0.2",
     "react-card-flip": "^1.1.1",
     "react-dom": "17.0.2",
