--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@devexpress/dx-react-scheduler-material-ui": "^2.7.6",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@pathofdev/react-tag-input": "^1.0.7",
     "@popperjs/core": "2.9.1",
     "@types/lodash": "^4.14.171",
