--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "axios": "^0.21.1",
+    "date-fns": "^2.22.1",
     "html-react-parser": "^1.2.7",
     "next": "10.2.3",
     "node-sass": "^6.0.1",
