--- a/package.json
+++ b/package.json
@@ -9,14 +9,12 @@
   },
   "dependencies": {
     "@date-io/date-fns": "^2.11.0",
-    "@devexpress/dx-react-core": "^2.7.6",
-    "@devexpress/dx-react-scheduler": "^2.7.6",
-    "@devexpress/dx-react-scheduler-material-ui": "^2.7.6",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@pathofdev/react-tag-input": "^1.0.7",
     "@popperjs/core": "2.9.1",
+    "@toast-ui/react-calendar": "^1.0.5",
     "@types/lodash": "^4.14.171",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
