--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
+    "@material-ui/styles": "^4.11.4",
     "@pathofdev/react-tag-input": "^1.0.7",
     "@popperjs/core": "2.9.1",
     "@toast-ui/react-calendar": "^1.0.5",
