--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@zeit/next-sass": "^1.0.1",
     "axios": "^0.21.1",
     "date-fns": "^2.22.1",
+    "dayjs": "^1.10.6",
     "html-react-parser": "^1.2.7",
+    "lodash-es": "^4.17.21",
     "next": "10.2.3",
     "node-sass": "^6.0.1",
     "react": "17.0.2",
