add animation when switch card

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@material-ui/styles": "^4.11.4",
     "@pathofdev/react-tag-input": "^1.0.7",
     "@popperjs/core": "2.9.1",
+    "@tailwindui/react": "^0.1.1",
     "@toast-ui/react-calendar": "^1.0.5",
     "@types/lodash": "^4.14.171",
     "@zeit/next-css": "^1.0.1",
