--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@babel/runtime": "^7.14.8",
     "@date-io/date-fns": "^2.11.0",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
@@ -43,7 +44,7 @@
     "@types/react-router-dom": "^5.1.7",
     "autoprefixer": "^10.2.6",
     "postcss": "^8.3.0",
-    "tailwindcss": "^2.1.4",
+    "tailwindcss": "^2.2.7",
     "typescript": "4.3.2"
   }
 }
