--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-card-flip": "^1.1.1",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.8.4",
+    "react-icons": "^4.2.0",
     "react-quill": "^1.3.5",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
